# muon-MusePaper

./: .gitignore  .gitignore.local  .gitignore.remote  README.md  main.py  pyproject.toml  start.bat  start.ps1
dashboard/: index.html
data/: tag_tree.json
docs/: PROJECT-ROADMAP.md  architecture-specification.md  blueprint-v2.md  chat-history.md  crawler-architecture.md  daily-intelligence-design.md  demo.py  design.md  diagrams-v2.mmd  interest-discovery-design.md  open-source-analysis.md
front-end/: info.md  newspaper-layout-research.md  page-flip-research-2025.md  tech-stack-recommendation.md
front-end/app/: index.html  package-lock.json  package.json  tailwind.config.js
front-end/app/src/: App.tsx  index.css
front-end/app/src/agents/: auditAgent.ts  imageAgent.ts
front-end/app/src/components/: ArticleBlock.tsx  ArticleCard.tsx  DeliveryAnimation.tsx  DropCap.tsx  EngravingImage.tsx  FinishOverlay.tsx  Footer.tsx  Layout.tsx  (+6 more)
muse/: __init__.py  camofox.py  content_fetcher.py  crawler.py  cron.py  decoder.py  effectiveness.py  embedder.py  engine.py  llm.py  models.py  newsnow.py  parsers.py  predictor.py  ranker.py  sources.py  telegram_bot.py  test.py  types.py
muse/agents/: __init__.py  abstract_agent.py  layout_agent.py
muse/learning/: __init__.py  fast_loop.py  logger.py  slow_loop.py
muse/sources/: __init__.py  aggregator.py  base.py  native.py  newsnow.py  rsshub.py
muse/ui/: __init__.py  kanban.py  notion_sync.py
tests/: __init__.py  test_api.py  test_effectiveness.py  test_learning.py  test_models.py  test_newspaper.py  test_ranker.py
(+11 files in other folders)
